android10.js to maurizio10.js

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -135,38 +135,38 @@
     </script>
     <link href="index.html" rel="canonical">
     <!--
-    <link rel="alternate" hreflang="da-DK" href="https://www.android.com/intl/da_dk/"/>
-     <link rel="alternate" hreflang="de-DE" href="https://www.android.com/intl/de_de/"/>
-     <link rel="alternate" hreflang="en-AU" href="https://www.android.com/intl/en_au/"/>
-     <link rel="alternate" hreflang="en-CA" href="https://www.android.com/intl/en_ca/"/>
-     <link rel="alternate" hreflang="en-GB" href="https://www.android.com/intl/en_uk/"/>
-     <link rel="alternate" hreflang="en-HK" href="https://www.android.com/intl/en_hk/"/>
-     <link rel="alternate" hreflang="en-IE" href="https://www.android.com/intl/en_ie/"/>
-     <link rel="alternate" hreflang="en-IN" href="https://www.android.com/intl/en_in/"/>
-     <link rel="alternate" hreflang="en-NZ" href="https://www.android.com/intl/en_nz/"/>-->
+    <link rel="alternate" hreflang="da-DK" href="http://www.mauriziominieri.it/lang/da_dk/"/>
+     <link rel="alternate" hreflang="de-DE" href="http://www.mauriziominieri.it/lang/de_de/"/>
+     <link rel="alternate" hreflang="en-AU" href="http://www.mauriziominieri.it/lang/en_au/"/>
+     <link rel="alternate" hreflang="en-CA" href="http://www.mauriziominieri.it/lang/en_ca/"/>
+     <link rel="alternate" hreflang="en-GB" href="http://www.mauriziominieri.it/lang/en_uk/"/>
+     <link rel="alternate" hreflang="en-HK" href="http://www.mauriziominieri.it/lang/en_hk/"/>
+     <link rel="alternate" hreflang="en-IE" href="http://www.mauriziominieri.it/lang/en_ie/"/>
+     <link rel="alternate" hreflang="en-IN" href="http://www.mauriziominieri.it/lang/en_in/"/>
+     <link rel="alternate" hreflang="en-NZ" href="http://www.mauriziominieri.it/lang/en_nz/"/>-->
      <link rel="alternate" hreflang="en-US" href="http://www.mauriziominieri.it/lang/en_us/"/>
-    <!-- <link rel="alternate" hreflang="es-ES" href="https://www.android.com/intl/es_es/"/>
-     <link rel="alternate" hreflang="es-MX" href="https://www.android.com/intl/es-419_mx/"/>
-     <link rel="alternate" hreflang="fr-CA" href="https://www.android.com/intl/fr_ca/"/>
-     <link rel="alternate" hreflang="fr-FR" href="https://www.android.com/intl/fr_fr/"/>
-     <link rel="alternate" hreflang="id-ID" href="https://www.android.com/intl/id_id/"/>
+    <!-- <link rel="alternate" hreflang="es-ES" href="http://www.mauriziominieri.it/lang/es_es/"/>
+     <link rel="alternate" hreflang="es-MX" href="http://www.mauriziominieri.it/lang/es-419_mx/"/>
+     <link rel="alternate" hreflang="fr-CA" href="http://www.mauriziominieri.it/lang/fr_ca/"/>
+     <link rel="alternate" hreflang="fr-FR" href="http://www.mauriziominieri.it/lang/fr_fr/"/>
+     <link rel="alternate" hreflang="id-ID" href="http://www.mauriziominieri.it/lang/id_id/"/>
    -->
      <link rel="alternate" hreflang="it-IT" href="http://www.mauriziominieri.it/"/>
      <!--
-     <link rel="alternate" hreflang="nl-NL" href="https://www.android.com/intl/nl_nl/"/>
-     <link rel="alternate" hreflang="nb-NO" href="https://www.android.com/intl/no_no/"/>
-     <link rel="alternate" hreflang="pl-PL" href="https://www.android.com/intl/pl_pl/"/>
-     <link rel="alternate" hreflang="pt-BR" href="https://www.android.com/intl/pt-BR_br/"/>
-     <link rel="alternate" hreflang="pt-PT" href="https://www.android.com/intl/pt_pt/"/>
-     <link rel="alternate" hreflang="sv-SE" href="https://www.android.com/intl/sv_se/"/>
-     <link rel="alternate" hreflang="tr-TR" href="https://www.android.com/intl/tr_tr/"/>
-     <link rel="alternate" hreflang="ru-RU" href="https://www.android.com/intl/ru_ru/"/>
-     <link rel="alternate" hreflang="th-TH" href="https://www.android.com/intl/th_th/"/>
-     <link rel="alternate" hreflang="zh-Hans-CN" href="https://www.android.com/intl/zh-CN_cn/"/>
-     <link rel="alternate" hreflang="zh-Hant-HK" href="https://www.android.com/intl/zh-HK_hk/"/>
-     <link rel="alternate" hreflang="zh-Hant-TW" href="https://www.android.com/intl/zh-TW_tw/"/>
-     <link rel="alternate" hreflang="ja-JP" href="https://www.android.com/intl/ja_jp/"/>
-     <link rel="alternate" hreflang="ko-KR" href="https://www.android.com/intl/ko_kr/"/>
+     <link rel="alternate" hreflang="nl-NL" href="https://www.mauriziominieri.it/lang/nl_nl/"/>
+     <link rel="alternate" hreflang="nb-NO" href="https://www.mauriziominieri.it/lang/no_no/"/>
+     <link rel="alternate" hreflang="pl-PL" href="https://www.mauriziominieri.it/lang/pl_pl/"/>
+     <link rel="alternate" hreflang="pt-BR" href="https://www.mauriziominieri.it/lang/pt-BR_br/"/>
+     <link rel="alternate" hreflang="pt-PT" href="https://www.mauriziominieri.it/lang/pt_pt/"/>
+     <link rel="alternate" hreflang="sv-SE" href="https://www.mauriziominieri.it/lang/sv_se/"/>
+     <link rel="alternate" hreflang="tr-TR" href="https://www.mauriziominieri.it/lang/tr_tr/"/>
+     <link rel="alternate" hreflang="ru-RU" href="https://www.mauriziominieri.it/lang/ru_ru/"/>
+     <link rel="alternate" hreflang="th-TH" href="https://www.mauriziominieri.it/lang/th_th/"/>
+     <link rel="alternate" hreflang="zh-Hans-CN" href="https://www.mauriziominieri.it/lang/zh-CN_cn/"/>
+     <link rel="alternate" hreflang="zh-Hant-HK" href="https://www.mauriziominieri.it/lang/zh-HK_hk/"/>
+     <link rel="alternate" hreflang="zh-Hant-TW" href="https://www.mauriziominieri.it/lang/zh-TW_tw/"/>
+     <link rel="alternate" hreflang="ja-JP" href="https://www.mauriziominieri.it/lang/ja_jp/"/>
+     <link rel="alternate" hreflang="ko-KR" href="https://www.mauriziominieri.it/lang/ko_kr/"/>
    -->
 
     <link rel="dns-prefetch" href="http://fonts.googleapis.com/">
@@ -174,11 +174,12 @@
     <link rel="dns-prefetch" href="http://www.google.com/">
     <link rel="dns-prefetch" href="http://apis.google.com/">
 
-    <!--<link href="https://www.android.com/static/img/favicon.ico" rel="shortcut icon">
-    <link href="https://www.android.com/static/img/touch-icon-iphone.png" rel="apple-touch-icon">
-    <link href="https://www.android.com/static/img/touch-icon-ipad.png" rel="apple-touch-icon" sizes="76x76">
-    <link href="https://www.android.com/static/img/touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="120x120">
-    <link href="https://www.android.com/static/img/touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="152x152">-->
+    <!--
+    <link href="https://www.mauriziominieri.it/static/img/favicon.ico" rel="shortcut icon">
+    <link href="https://www.mauriziominieri.it/static/img/touch-icon-iphone.png" rel="apple-touch-icon">
+    <link href="https://www.mauriziominieri.it/static/img/touch-icon-ipad.png" rel="apple-touch-icon" sizes="76x76">
+    <link href="https://www.mauriziominieri.it/static/img/touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="120x120">
+    <link href="https://www.mauriziominieri.it/static/img/touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="152x152">-->
 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -830,23 +831,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <li class="hero-carousel__device" data-carousel-element="item" data-ca-label="Picture no limits">
                 <div class="hero-carousel__device-wrp photo-phone">
                     <picture class="hero-carousel__device-picture">
-                     <source srcset="https://www.android.com/static/2016/img/hero-carousel/photo-phone.png"
+                     <source srcset="https://www.mauriziominieri.it/static/2016/img/hero-carousel/photo-phone.png"
                        media="(min-width: 1000px)">
-                      <img src="https://www.android.com/static/2016/img/hero-carousel/photo-phone.png" alt=""
+                      <img src="https://www.mauriziominieri.it/static/2016/img/hero-carousel/photo-phone.png" alt=""
                           class="hero-carousel__animated-img"
                           data-properties-to-promote="transform, opacity">
                     </picture>
                     <picture class="hero-carousel__device-picture">
-                     <source srcset="https://www.android.com/static/2016/img/hero-carousel/photo-screen.png"
+                     <source srcset="https://www.mauriziominieri.it/static/2016/img/hero-carousel/photo-screen.png"
                        media="(min-width: 1000px)">
-                      <img src="https://www.android.com/static/2016/img/hero-carousel/photo-screen.png" alt=""
+                      <img src="https://www.mauriziominieri.it/static/2016/img/hero-carousel/photo-screen.png" alt=""
                           class="hero-carousel__animated-img"
                           data-properties-to-promote="transform, opacity">
                     </picture>
                     <picture class="hero-carousel__device-picture">
-                     <source srcset="https://www.android.com/static/2016/img/hero-carousel/photo-ux.png"
+                     <source srcset="https://www.mauriziominieri.it/static/2016/img/hero-carousel/photo-ux.png"
                        media="(min-width: 1000px)">
-                      <img src="https://www.android.com/static/2016/img/hero-carousel/photo-ux.png" alt=""
+                      <img src="https://www.mauriziominieri.it/static/2016/img/hero-carousel/photo-ux.png" alt=""
                           class="hero-carousel__animated-img"
                           data-properties-to-promote="transform, opacity">
                     </picture>
@@ -3649,75 +3650,81 @@ data-ca-label="tv">
       </a>
     </div>
     <ul role="menubar">
-      <!--
-            <li class="c-nav__dropdown c-nav__dropdown--default  " aria-haspopup="true" data-c-nav-dropdown role="menuitem" tabindex="0">
+
+      <!--  <li class="c-nav__dropdown c-nav__dropdown--default  " aria-haspopup="true" data-c-nav-dropdown role="menuitem" tabindex="0">
               Versioni
               <span class="icon icon--caret"></span>
               <ul aria-hidden="true" role="menu">
 <li role="none">
-      <a href="history/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="story">Storia di Android</a>
+      <a href="history/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="story">Storia di Maurizio</a>
     </li>
 <li role="none">
-      <a href="https://www.android.com/android-10/" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="android-10">Android 10</a>
+      <a href="" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="maurizio 10">Maurizio 10</a>
     </li>
 <li role="none">
-      <a href="https://www.android.com/versions/pie-9-0/" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="pie">9 Pie</a>
+      <a href="" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="pie">9</a>
     </li>
 <li role="none">
-      <a href="https://www.android.com/versions/oreo-8-0/" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="oreo">8.0 Oreo</a>
+      <a href="" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="oreo">8.0</a>
     </li>
 <li role="none">
-      <a href="versions/nougat-7-0/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="nougat">7.0 Nougat</a>
+      <a href="versions/nougat-7-0/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="nougat">7.0</a>
     </li>
 <li role="none">
-      <a href="versions/marshmallow-6-0/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="marshmallow">6.0 Marshmallow</a>
+      <a href="versions/marshmallow-6-0/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="marshmallow">6.0</a>
     </li>
 <li role="none">
-      <a href="versions/lollipop-5-0/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="lollipop">5.0 Lollipop</a>
+      <a href="versions/lollipop-5-0/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="lollipop">5.0</a>
     </li>
 <li role="none">
-      <a href="versions/kit-kat-4-4/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="kitkat">4.4 KitKat</a>
+      <a href="versions/kit-kat-4-4/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="kitkat">4.4</a>
     </li>
 <li role="none">
-      <a href="versions/jelly-bean-4-3/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="jellybean">4.3 Jelly Bean</a>
+      <a href="versions/jelly-bean-4-3/index.html" role="menuitem" data-g-event="site-footer-versions" data-g-action="clicked" data-g-label="jellybean">4.3</a>
     </li>
               </ul>
+            </li>-->
+    <li class="c-nav__dropdown c-nav__dropdown--default  " aria-haspopup="true" data-c-nav-dropdown role="menuitem" tabindex="0">
+      Developer
+      <span class="icon icon--caret"></span>
+      <ul aria-hidden="true" role="menu">
+        <li role="none">
+              <a href="" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="resources">Maurizio Minieri</a>
+          </li>
+          <li role="none">
+                <a href="http://www.mauriziominieri.it/certificati/" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="resources">Degrees</a>
             </li>
-            <li class="c-nav__dropdown c-nav__dropdown--default  " aria-haspopup="true" data-c-nav-dropdown role="menuitem" tabindex="0">
-              Sviluppatori
-              <span class="icon icon--caret"></span>
-              <ul aria-hidden="true" role="menu">
-<li role="none">
-      <a href="https://developer.android.com/" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="resources">Risorse per sviluppatori di app</a>
-    </li>
-<li role="none">
-      <a href="gms/index.html" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="gms">Servizi Google Mobile</a>
-    </li>
-<li role="none">
-      <a href="https://source.android.com/" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="open-source">Android Open Source Project</a>
-    </li>
-<li role="none">
-      <a href="https://developer.android.com/sdk/" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="sdk">Android SDK</a>
-    </li>
-<li role="none">
-      <a href="https://developer.android.com/work" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="4work">Android for Work</a>
-    </li>
-<li role="none">
-      <a href="security-center/index.html" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="/intl/it_it/security-center/">Centro per la sicurezza Android</a>
-    </li>
+    <!--<li role="none">
+          <a href="" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="resources">Risorse per sviluppatori di app</a>
+        </li>
+    <li role="none">
+          <a href="gms/index.html" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="gms">Servizi Google Mobile</a>
+        </li>
+    <li role="none">
+          <a href="" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="open-source">Maurizio Open Source Project</a>
+        </li>
+    <li role="none">
+          <a href="" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="sdk">Maurizio SDK</a>
+        </li>
+    <li role="none">
+          <a href="" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="4work">Maurizio for Work</a>
+        </li>
+    <li role="none">
+      <a href="security-center/index.html" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="/intl/it_it/security-center/">Centro per la sicurezza Maurizio</a>
+    </li>-->
               </ul>
             </li>
-<li role="none">
-      <a href="https://officialandroid.blogspot.com/" target="_blank" role="menuitem" data-g-event="site-footer" data-g-action="clicked" data-g-label="blog">Blog</a>
+   <!--<li role="none">
+      <a href="" target="_blank" role="menuitem" data-g-event="site-footer" data-g-action="clicked" data-g-label="blog">Blog</a>
     </li>
+-->
+<!--<li role="none">
+      <a href="https://www.google.com/intl/it/usability/index.html?l=16&amp;reserved=0&amp;pType=0&amp;productTag=andr&amp;campaignType=ghc&amp;campaignDate=0&amp;labelTag=0&amp;referral_code=mauriziodotcom_itIT" target="_blank" role="menuitem" data-g-event="site-footer" data-g-action="clicked" data-g-label="join-user-studies">Partecipa agli studi sugli utenti</a>
+    </li>-->
+  <!--<li role="none">
+      <a href="everyone/index.html" role="menuitem" data-g-event="" data-g-action="clicked" data-g-label="/intl/it_it/everyone/">Maurizio è per il divertimento</a>
+    </li>-->
 
-<li role="none">
-      <a href="https://www.google.com/intl/it/usability/index.html?l=16&amp;reserved=0&amp;pType=0&amp;productTag=andr&amp;campaignType=ghc&amp;campaignDate=0&amp;labelTag=0&amp;referral_code=androiddotcom_itIT" target="_blank" role="menuitem" data-g-event="site-footer" data-g-action="clicked" data-g-label="join-user-studies">Partecipa agli studi sugli utenti</a>
-    </li>
-<li role="none">
-      <a href="everyone/index.html" role="menuitem" data-g-event="" data-g-action="clicked" data-g-label="/intl/it_it/everyone/">Android è per tutti</a>
-    </li>
-  -->
     </ul>
 
 <div class="c-language-selector " data-c-language-selector>
@@ -3851,7 +3858,7 @@ data-ca-label="tv">
 
 
   <script src="http://www.mauriziominieri.it/static/2020/js/pageControlMove.js"></script>
-  <script defer src="http://www.mauriziominieri.it/static/2020/js/android10.js"></script>
+  <script defer src="http://www.mauriziominieri.it/static/2020/js/maurizio10.js"></script>
 
 
   <script defer src="http://www.mauriziominieri.it/static/2020/js/myCarousel.js"></script>
