all android -> maurizio

--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -579,7 +579,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <!--Quella più in alto dark-->
               <!--       <cloud-image
     src="https://lh3.googleusercontent.com/0jpEpPmdV_-h6mnxRozT876XmY7xYaFr7641ueHZW6qgN9VLl8wiMnKlVKDKhCWw8fDst-l3Gx7DdPRfIpnKp3KR9QSMkJN-6LVpnKA"
-    alt="Collage of Android 10 features on multiple different devices"
+    alt="Collage of Maurizio 10 features on multiple different devices"
     class="hero-devices__image hero-devices__image-0 cloud-image--portrait"      width="150"
     md="201"
     lg="190"
@@ -591,7 +591,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     src="https://lh3.googleusercontent.com/0jpEpPmdV_-h6mnxRozT876XmY7xYaFr7641ueHZW6qgN9VLl8wiMnKlVKDKhCWw8fDst-l3Gx7DdPRfIpnKp3KR9QSMkJN-6LVpnKA=w150-v3-e365"
     srcset="https://lh3.googleusercontent.com/0jpEpPmdV_-h6mnxRozT876XmY7xYaFr7641ueHZW6qgN9VLl8wiMnKlVKDKhCWw8fDst-l3Gx7DdPRfIpnKp3KR9QSMkJN-6LVpnKA=w281-v3-e365 281w,https://lh3.googleusercontent.com/0jpEpPmdV_-h6mnxRozT876XmY7xYaFr7641ueHZW6qgN9VLl8wiMnKlVKDKhCWw8fDst-l3Gx7DdPRfIpnKp3KR9QSMkJN-6LVpnKA=w190-v3-e365 190w,https://lh3.googleusercontent.com/0jpEpPmdV_-h6mnxRozT876XmY7xYaFr7641ueHZW6qgN9VLl8wiMnKlVKDKhCWw8fDst-l3Gx7DdPRfIpnKp3KR9QSMkJN-6LVpnKA=w201-v3-e365 201w,"
     sizes="(min-width: 1440px) 281px,(min-width: 1000px) 190px,(min-width: 600px) 201px,"
-    alt="Collage of Android 10 features on multiple different devices"
+    alt="Collage of Maurizio 10 features on multiple different devices"
     >
     </noscript>
   </cloud-image>-->
@@ -600,14 +600,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <!--
                    <cloud-image
     src="https://lh3.googleusercontent.com/qbltoJOFjwk-f0DDshheW6xindJFQqk9LY2sRjh4472GYdE2m0jA1rqbqM0TrGeBEuSCyq62CnlbMLIpoqn1q1JZJ6pMmLykaS58xPo"
-    alt="Collage of Android 10 features on multiple different devices"
+    alt="Collage of Maurizio 10 features on multiple different devices"
     class="hero-devices__image hero-devices__image-1 cloud-image--portrait"      width="150"
     md="201"
     lg="190"
     xl="281"
     cache-ttl="e365"
     >
-    <img src="https://lh3.googleusercontent.com/qbltoJOFjwk-f0DDshheW6xindJFQqk9LY2sRjh4472GYdE2m0jA1rqbqM0TrGeBEuSCyq62CnlbMLIpoqn1q1JZJ6pMmLykaS58xPo=w320-e365" alt="Collage of Android 10 features on multiple different devices">
+    <img src="https://lh3.googleusercontent.com/qbltoJOFjwk-f0DDshheW6xindJFQqk9LY2sRjh4472GYdE2m0jA1rqbqM0TrGeBEuSCyq62CnlbMLIpoqn1q1JZJ6pMmLykaS58xPo=w320-e365" alt="Collage of Maurizio 10 features on multiple different devices">
   </cloud-image>
 -->
 
@@ -635,7 +635,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <img
           id="animation-image-1"
-          src="/static/2020/img/home/android1-dark.png"
+          src="http://www.mauriziominieri.it/static/2020/img/home/android1-dark.png"
           alt="Android dark"
           class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
       </img>
@@ -647,7 +647,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           lg="190"
           xl="281"
           cache-ttl="e365">
-          <img src="static/2020/img/home/android1-light.png" alt="Android light">
+          <img src="http://www.mauriziominieri.it/static/2020/img/home/android1-light.png" alt="Android light">
        </cloud-image>
 
 
@@ -904,7 +904,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="back-logo"></div>
 
 
-                    <p class="cta-grid__copy-item is-copy" style="margin-top:5%; margin-bottom:50%">Web developer; Android &amp; iOS enthusiast; Unity3D game developer; C, C++, C#, Java &amp; Javascript fanatic; HTML &amp; CSS thinker; Web & videogame lover.</p>
+                    <p class="cta-grid__copy-item is-copy" style="margin-top:5%; margin-bottom:50%">Web, Android &amp; iOS developer; Unity3D game developer; C, C++, C#, Java &amp; Javascript fanatic; HTML &amp; CSS thinker; Web & videogame lover.</p>
 
                     <a href="mailto:mauminieri@gmail.com" aria-label="My email"  title="Send me an email">
                     <svg aria-hidden="true" width="70" height="70" viewBox="0 0 50 50" >
@@ -3431,7 +3431,7 @@ data-ca-label="tv">
 
 <!--INIZIO MIE FOTO-->
   <section class="l-section l-section--has-subsection" id="section-irl"
-           data-c-tracking-section data-tracking-name="android-irl"
+           data-c-tracking-section data-tracking-name="maurizio-irl"
            >
     <div class="o-container">
       <div class="l-section__intro">
@@ -3510,12 +3510,12 @@ data-ca-label="tv">
               <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden u-from-desktop-is-hidden" href="#"  target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Smarter photo albums, without the work">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Bo</span>
-                    <span class="c-blocks__item-category">Bo</span>
+                    <span class="c-blocks__item-title">Certificate</span>
+                    <span class="c-blocks__item-category">Google</span>
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="https://www.android.com/static/2016/img/blocks/block-7.png" alt="">
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/certificatoGoogle.pdf" alt="Google degree">
               </a>
           </div>
         </div>
