--- a/index.html
+++ b/index.html
@@ -6135,7 +6135,7 @@ aria-label="auto"data-ca-label="auto">
 
 
 
-<!--Footer QUIII-->
+<!--Footer-->
 
 <footer class="l-footer" role="contentinfo"
         data-c-tracking-section
@@ -6144,7 +6144,7 @@ aria-label="auto"data-ca-label="auto">
   <nav class="c-nav c-nav--main" role="navigation">
     <div class="c-nav__header">
       <a class="logo-maurizio" href="http://www.mauriziominieri.it" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
-            <img src="http://www.mauriziominieri.it/static/2020/img/icons/maurizio-m-logo.png" height="30" />
+            <img src="http://www.mauriziominieri.it/static/2020/img/icons/maurizio-m-logo.png" height="25" style="margin-bottom:4%" />
       </a>
     </div>
     <ul role="menubar">
