--- a/lang/en_us/index.html
+++ b/lang/en_us/index.html
@@ -3637,7 +3637,7 @@ data-ca-label="tv">
 
 
 
-<!--Footer QUIII-->
+<!--Footer-->
 
 <footer class="l-footer" role="contentinfo"
         data-c-tracking-section
@@ -3646,7 +3646,7 @@ data-ca-label="tv">
   <nav class="c-nav c-nav--main" role="navigation">
     <div class="c-nav__header">
       <a class="logo-maurizio" href="http://www.mauriziominieri.it" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
-            <img src="http://www.mauriziominieri.it/static/2020/img/icons/maurizio-m-logo.png" height="30" />
+            <img src="http://www.mauriziominieri.it/static/2020/img/icons/maurizio-m-logo.png" height="25" style="margin-bottom:4%" />
       </a>
     </div>
     <ul role="menubar">
