--- a/certificati/index.html
+++ b/certificati/index.html
@@ -619,10 +619,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <span class="icon icon--caret"></span>
               <ul aria-hidden="true" role="menu">
                 <li role="none">
-                  <a href="" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="resources">Maurizio Minieri</a>
+                  <a href="http://www.mauriziominieri.it/" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="resources">Maurizio Minieri</a>
                 </li>
                 <li role="none">
-                  <a href="http://www.mauriziominieri.it/certificati/" target="_blank" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="resources">Certificati</a>
+                  <a href="http://www.mauriziominieri.it/certificati/" role="menuitem" data-g-event="site-footer-developers" data-g-action="clicked" data-g-label="resources">Certificati</a>
                 </li>
 
               </ul>
