--- a/certificati/index.html
+++ b/certificati/index.html
@@ -608,7 +608,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         data-tracking-offset="0">
   <nav class="c-nav c-nav--main" role="navigation">
     <div class="c-nav__header">
-      <a class="logo-maurizio" href="http://www.mauriziominieri.it" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
+      <a class="logo-maurizio" href="http://www.mauriziominieri.it" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com">
             <img src="http://www.mauriziominieri.it/static/2020/img/icons/maurizio-m-logo.png" height="25" style="margin-bottom:4%" />
       </a>
     </div>
