--- a/index.html
+++ b/index.html
@@ -428,16 +428,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 Un pò di me
                 <span class="icon icon--caret"></span>
                 <ul aria-hidden="true" role="menu">
-<li>
-      <a href="http://www.mauriziominieri.it/static/2020/certificati/CurriculumMaurizioMinieri.pdf" target="_blank"  role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="curriculum">
-          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Curriculum" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png 2x" height="200" width="200">
-</span>Curriculum</a>
-    </li>
-<li>
-      <a href="http://www.mauriziominieri.it/static/2020/certificati/MyTicket.png" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="play">
-          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Business card" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png 2x" height="200" width="350">
-</span>Biglietto da visita</a>
-    </li>
+            <li>
+                  <a href="http://www.mauriziominieri.it/static/2020/certificati/CurriculumMaurizioMinieri.pdf" target="_blank"  role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="curriculum">
+                      <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Curriculum" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png 2x" height="200" width="200">
+            </span>Curriculum</a>
+                </li>
+            <li>
+                  <a href="http://www.mauriziominieri.it/static/2020/certificati/MyTicket.png" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="business card">
+                      <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Business card" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png 2x" height="200" width="350">
+            </span>Biglietto da visita</a>
+                </li>
+                <li>
+                      <a href="http://www.mauriziominieri.it/static/2020/certificati/" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="degrees">
+                          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Degrees" class="icon" src="http://www.mauriziominieri.it/static/2020/certificati/degrees.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/degrees.png 2x" height="200" width="350">
+                </span>Certificati</a>
+                    </li>
 
 
 
