--- a/certificati/index.html
+++ b/certificati/index.html
@@ -539,6 +539,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/GoogleAnalytics.png" alt="Google analytics" style=" width:100%;" >
               </a>
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/GoogleTagManager.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Google tag manager" >
+                <div class="c-blocks__item-inner">
+                  <div class="c-blocks__item-body">
+                    <span class="c-blocks__item-title">Google Tag Manager</span>
+                  </div>
+                </div>
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/GoogleTagManager.png" alt="Google tag manager" style=" width:100%;" >
+              </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/CCNA1.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="CCNA1" >
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
