Google Analytics inside

--- a/certificati/index.html
+++ b/certificati/index.html
@@ -515,9 +515,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="c-blocks">
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/CertificatoAppleTeacher.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Apple Teacher" >
                 <div class="c-blocks__item-inner">
-                    <span class="c-blocks__item-tag">In primo piano</span>
+                    <span class="c-blocks__item-tag">Apple</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Apple Teacher</span>
+                    <span class="c-blocks__item-title">1) Apple Teacher, 2) Apple Teacher swift</span>
 
                   </div>
                 </div>
@@ -533,19 +533,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/GoogleAnalytics.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Google analytics" >
                 <div class="c-blocks__item-inner">
+                    <span class="c-blocks__item-tag">Google Analytics Academy</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Google Analytics Avanzato</span>
+                    <span class="c-blocks__item-title">1) Avanzato, 2) Tag Manager, </span>
                   </div>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/GoogleAnalytics.png" alt="Google analytics" style=" width:100%;" >
-              </a>
-              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/GoogleTagManager.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Google tag manager" >
-                <div class="c-blocks__item-inner">
-                  <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Google Tag Manager</span>
-                  </div>
-                </div>
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/GoogleTagManager.png" alt="Google tag manager" style=" width:100%;" >
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/CCNA1.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="CCNA1" >
                 <div class="c-blocks__item-inner">
