--- a/certificati/index.html
+++ b/certificati/index.html
@@ -535,7 +535,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="c-blocks__item-inner">
                     <span class="c-blocks__item-tag">Google Analytics Academy</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">1) Avanzato, 2) Tag Manager, 3) Principiante, 4) 360</span>
+                    <span class="c-blocks__item-title">1) Avanzato, 2) Tag Manager, 3) Principiante, 4) 360, 5) Power Users, 6) Data Studio</span>
                   </div>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/GoogleAnalytics.png" alt="Google analytics" style=" width:100%;" >
