--- a/certificati/index.html
+++ b/certificati/index.html
@@ -542,8 +542,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/CCNA1.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="CCNA1" >
                 <div class="c-blocks__item-inner">
+                    <span class="c-blocks__item-tag">Cisco</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Cisco CCNA1</span>
+                    <span class="c-blocks__item-title">CCNA1</span>
                   </div>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/CCNA1.png" alt="CCNA1" style=" width:100%;" >
