--- a/certificati/index.html
+++ b/certificati/index.html
@@ -557,13 +557,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/AnalisiStatistica-ValutazioneDelDatoSperimentale.png" alt="analisi statistica" style=" width:100%;" >
               </a>
-              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/BitDegreeHack.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Hacker" >
+              <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/BitDegree.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Hacker" >
                 <div class="c-blocks__item-inner">
+                  <span class="c-blocks__item-tag">BitDegree</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Ethical Hacker</span>
+                    <span class="c-blocks__item-title">1) HTML & CSS, 2) Ethical Hacker</span>
                   </div>
                 </div>
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/BitDegreeHack.png" alt="Hacker" style=" width:100%;" >
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/BitDegree.png" alt="Hacker" style=" width:100%;" >
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/BusinessInSociety.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Business in society" >
                 <div class="c-blocks__item-inner">
