--- a/certificati/index.html
+++ b/certificati/index.html
@@ -600,6 +600,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double" href="http://www.mauriziominieri.it/static/2020/certificati/CloudComputing.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Cloud" >
                 <div class="c-blocks__item-inner">
+                  <span class="c-blocks__item-tag">A Cloud Guru</span>
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Cloud computing</span>
                   </div>
