--- a/certificati/index.html
+++ b/certificati/index.html
@@ -602,7 +602,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="c-blocks__item-inner">
                   <span class="c-blocks__item-tag">A Cloud Guru</span>
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Cloud computing</span>
+                    <span class="c-blocks__item-title">1) Cloud computing</span>
                   </div>
                 </div>
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/CloudComputing.png" alt="Cloud" style=" width:100%;" >
